# Pong

./: Cargo.toml  README.md  index.html  styles.css
pkg/: package.json  pong.d.ts  pong.js  pong_bg.wasm  pong_bg.wasm.d.ts
src/: lib.rs
src/game_manager/: mod.rs
src/game_object/: mod.rs  traits.rs
src/game_object/ball/: mod.rs
src/game_object/paddle/: mod.rs
